Fix: Icons - Panel's overflow unified extension menu layout #544

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -8045,7 +8045,9 @@
     .subviewbutton > .toolbarbutton-text {
       padding-inline-start: var(--arrowpanel-menuicon-padding) !important;
     }
-    .toolbaritem-combined-buttons > .subviewbutton:not(.subviewbutton-iconic) > .toolbarbutton-text {
+    .toolbaritem-combined-buttons:not(.unified-extensions-item)
+      > .subviewbutton:not(.subviewbutton-iconic)
+      > .toolbarbutton-text {
       padding-inline-start: 0 !important;
     }
     #panelMenu_bookmarksMenu .subviewbutton[disabled="true"] .toolbarbutton-text,
